more practiced examples

--- a/examples/index0.html
+++ b/examples/index0.html
@@ -10,13 +10,7 @@
     <link rel="stylesheet" href="style0.css" />
     <title>Getting Started with JavaScript</title>
   </head>
-
   <body>
-    
-    <div class='flex-container'>
-      <h1>Hi</h1>
-    </div>
-
-    <script src="example12.js"></script>
+    <script src="functions0.js"></script>
   </body>
 </html>
