cleared some unnecessary files

--- a/examples/index0.html
+++ b/examples/index0.html
@@ -11,6 +11,6 @@
     <title>Getting Started with JavaScript</title>
   </head>
   <body>
-    <script src="functions0.js"></script>
+    <script src="javascript.js"></script>
   </body>
 </html>
