--- a/examples/index.html
+++ b/examples/index.html
@@ -47,15 +47,15 @@
 
     <ul id="users"></ul>
 
-    <!-- <ul class="items">
-        <li class="item">Item 1</li>
-        <li class="item">Item 2</li>
-        <li class="item">Item 3</li>
-      </ul> -->
+    <ul class="items">
+      <li class="item">Item 1</li>
+      <li class="item">Item 2</li>
+      <li class="item">Item 3</li>
+    </ul>
   </section>
 
 
-  <script src="main.js"></script>
+  <script src="javascript.js"></script>
 </body>
 
 </html>
