foreach on selector

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,22 +4,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="style0.css" />
-  <title>Getting Started with JavaScript</title>
-</head>
-
-<body>
-  <script src="javascript.js"></script>
-</body>
-
-</html>
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>JS For Beginners</title>
   <link rel="stylesheet" href="style.css">
@@ -55,7 +39,7 @@
   </section>
 
 
-  <script src="javascript.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
