--- a/dom/index.html
+++ b/dom/index.html
@@ -30,7 +30,8 @@
         <li class="list-group-item">Item 3</li>
         <li class="list-group-item">Item 4</li>
       </ul>
-      <span>hello</span>
+      <br>
+      <button class="btn btn-dark button-block" id="button">Click Here</button>
     </div>
   </div>
 
