shopify product details

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,32 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript</title>
-		<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="overview-benefits">
+      <div class="overview-benefits__card">
+        <img
+          src="https://static.garmincdn.com/en/products/010-02093-02/g/28789-1-f9675469-519e-498a-bd66-2fda302c0fcc.jpg"
+          alt=""
+          class="fr-fic fr-dii"
+        />
 
-		<div class="btn-container">
-			<button class="btn show-all" data-tab="all">show all</button>
-			<button class="btn car" data-tab="car">cars</button>
-			<button class="btn movie" data-tab="movie">movies</button>
-			<button class="btn color" data-tab="color">colors</button>
-		</div>
-	
-		<div class="container">
-			<div class="filtered-div" id="color" data-color="color">red</div>
-			<div class="filtered-div" id="car" data-car="car">bmw m4</div>
-			<div class="filtered-div" id="car" data-car="car">audi r8</div>
-			<div class="filtered-div" id="color" data-color="color">blue</div>
-			<div class="filtered-div" id="movie" data-movie="movie">the wolf of Wall street</div>
-			<div class="filtered-div" id="movie" data-movie="movie">the fast and the furious</div>
-			<div class="filtered-div" id="color" data-color="color">red</div>
-			<div class="filtered-div" id="car" data-car="car">bmw m4</div>
-			<div class="filtered-div" id="car" data-car="car">audi r8</div>
-			<div class="filtered-div" id="color" data-color="color">blue</div>
-			<div class="filtered-div" id="movie" data-movie="movie">the wolf of Wall street</div>
-			<div class="filtered-div" id="movie" data-movie="movie">the fast and the furious</div>
-		</div>
+        <h4>HD IPS DISPLAY WITH TOUCHSCREEN</h4>
 
+        <p>
+          This large 10&rdquo; display offers wider viewing angles, superior
+          clarity and sunlight readability, even with polarized sunglasses.
+        </p>
+      </div>
+      <div class="overview-benefits__card">
+        <h4>SIMPLE, ATTRACTIVE MOUNTING OPTIONS</h4>
+
+        <p>
+          You can install multiple displays, either flat mounted edge-to-edge
+          for a sleek glass helm look or mounted flush &mdash; creating a
+          stunning helm.
+        </p>
+      </div>
+      <div class="overview-benefits__card">
+        <h4>GRID<sup>TM</sup> 20 REMOTE CONTROL</h4>
+
+        <p>
+          The optional, easy-to-use <a href="">GRID 20</a> remote input device
+          provides intuitive remote access and control of your entire Garmin
+          marine system.
+        </p>
+      </div>
+    </div>
 
     <script src="script.js"></script>
   </body>
