--- a/examples/index.html
+++ b/examples/index.html
@@ -5,43 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.css" integrity="sha512-vA/fpEI8+rrDsPceGG+Rz4NBhaNE4lvJ8CrNfspqDQi6uyIs82Hwr8gm/E+SRs+ZKjJ2ihOdb6esDSAuJrWOhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
-    <div class="overview-benefits">
-      <div class="overview-benefits__card">
-        <img
-          src="https://static.garmincdn.com/en/products/010-02093-02/g/28789-1-f9675469-519e-498a-bd66-2fda302c0fcc.jpg"
-          alt=""
-          class="fr-fic fr-dii"
-        />
-
-        <h4>HD IPS DISPLAY WITH TOUCHSCREEN</h4>
-
-        <p>
-          This large 10&rdquo; display offers wider viewing angles, superior
-          clarity and sunlight readability, even with polarized sunglasses.
-        </p>
-      </div>
-      <div class="overview-benefits__card">
-        <h4>SIMPLE, ATTRACTIVE MOUNTING OPTIONS</h4>
-
-        <p>
-          You can install multiple displays, either flat mounted edge-to-edge
-          for a sleek glass helm look or mounted flush &mdash; creating a
-          stunning helm.
-        </p>
-      </div>
-      <div class="overview-benefits__card">
-        <h4>GRID<sup>TM</sup> 20 REMOTE CONTROL</h4>
-
-        <p>
-          The optional, easy-to-use <a href="">GRID 20</a> remote input device
-          provides intuitive remote access and control of your entire Garmin
-          marine system.
-        </p>
-      </div>
-    </div>
-
-    <script src="script.js"></script>
+		<div>
+			<div class="gallery_page py-8 lg:py-20">
+				<div class="mx-auto px-40">
+					<div class="flex flex-col items-center">
+						<nav>
+							<ul
+								class="
+									text-center
+									md:text-left
+									gallery-tabs-list
+									flex
+									text-xs
+									md:text-base
+									lg:text-2xl
+									font-bold
+									my-8
+									lg:my-12
+								"
+							>
+								<li class="gallery-tab" id="tab1">MY Travel</li>
+								<li class="gallery-tab" id="tab2">MY Events</li>
+								<li class="gallery-tab" id="tab3">MY Studio</li>
+								<li class="gallery-tab" id="tab4">MY Juniors</li>
+							</ul>
+						</nav>
+		
+						<div class="content-section">
+							<div class="gallery-tab-content"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
   </body>
 </html>
