--- a/examples/index.html
+++ b/examples/index.html
@@ -5,42 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.css" integrity="sha512-vA/fpEI8+rrDsPceGG+Rz4NBhaNE4lvJ8CrNfspqDQi6uyIs82Hwr8gm/E+SRs+ZKjJ2ihOdb6esDSAuJrWOhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<script src="script.js" defer></script>
+		<script src="https://www.workable.com/assets/embed.js" type="text/javascript"></script>
   </head>
   <body>
-		<div>
-			<div class="gallery_page py-8 lg:py-20">
-				<div class="mx-auto px-40">
-					<div class="flex flex-col items-center">
-						<nav>
-							<ul
-								class="
-									text-center
-									md:text-left
-									gallery-tabs-list
-									flex
-									text-xs
-									md:text-base
-									lg:text-2xl
-									font-bold
-									my-8
-									lg:my-12
-								"
-							>
-								<li class="gallery-tab" id="tab1">MY Travel</li>
-								<li class="gallery-tab" id="tab2">MY Events</li>
-								<li class="gallery-tab" id="tab3">MY Studio</li>
-								<li class="gallery-tab" id="tab4">MY Juniors</li>
-							</ul>
-						</nav>
-		
-						<div class="content-section">
-							<div class="gallery-tab-content"></div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		<div id="whr_embed_hook"></div>
   </body>
 </html>
